# xkcd-alt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  check.sh
cmake/: XkcdAlt-config.cmake.in  pdxka_boost_discover_tests_impl.cmake  pdxka_configure_test_paths.cmake  pdxka_configure_version.cmake  pdxka_find_curl.cmake  pdxka_target_helpers.cmake  pdxka_test_helpers.cmake
data/: xkcd-rss-20240604.xml
include/pdxka/: com.hh  common.h  curl.hh  curl_traits.hh  dllexport.h  features.h.in  netif.hh  option_parser.h  posix.hh  program_main.hh  program_options.h  program_options.hh  rss.h  rss.hh  rss_parser.h  string.h  string.hh  type_traits.hh  version.h  version.h.in  warnings.h
include/pdxka/testing/: path.h.in  path.hh.in  process.hh  program_main.hh  stream_diverter.hh
src/: CMakeLists.txt  main.cc  option_parser.cc  program_options.cc  rss.cc  rss_parser.cc  string.cc
src/pdxka/: CMakeLists.txt  program_main.cc  program_options.cc  rss.cc  string.cc
test/: CMakeLists.txt  com_test.cc  curl_test.cc  features_test.cc  main.cc  netif_test.cc  pdxka_bpo_check.cc  pdxka_find_curl_test.cmake  pdxka_inet_test.cc  pdxka_live_test.cmake  posix_test.cc  program_main_test.cc  type_traits_test.cc  version_test.cc
test/pdxka_cmake_usage_test/: CMakeLists.txt
